Use pkg-config for openssl devel

--- a/configure.ac
+++ b/configure.ac
@@ -142,6 +142,8 @@ if test "x$have_sdk_dir" = "xtrue"; then
     export PKG_CONFIG_PATH
 fi
 
+PKG_CHECK_MODULES([OPENSSL], [openssl], ,[AC_MSG_ERROR([Missing required openssl dev])])
+
 if test "x$have_win32" != xtrue; then
     PKG_CHECK_MODULES([LIBCURL], [libcurl >= 7.25.0], [AC_DEFINE([CURL_HAS_KEEPALIVE], [1], [Defined if version of curl supports keepalive.])],
     [PKG_CHECK_MODULES([LIBCURL], [libcurl >= 7.15.2], ,[AC_MSG_ERROR([Missing required libcurl dev >= 7.15.2])])])
@@ -154,6 +156,7 @@ AC_DEFINE([HAVE_LIBCURL], [1], [Defined to 1 if libcurl support built in])
 AC_SUBST(LIBCURL_CFLAGS)
 AC_SUBST(LIBCURL_CPPFLAGS)
 AC_SUBST(LIBCURL_LIBS)
+AC_SUBST(OPENSSL_LIBS)
 AC_SUBST(JANSSON_LIBS)
 AC_SUBST(PTHREAD_FLAGS)
 AC_SUBST(PTHREAD_LIBS)
