Fix windows build

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,6 @@
 
+ACLOCAL_AMFLAGS = -I m4
+
 if WANT_JANSSON
 JANSSON_INCLUDES= -I$(top_srcdir)/compat/jansson
 else
@@ -9,7 +11,7 @@ EXTRA_DIST	= example-cfg.json nomacro.pl
 
 SUBDIRS		= compat
 
-INCLUDES	= $(PTHREAD_FLAGS) -march=native -Ofast -flto -fuse-linker-plugin -std=gnu11 $(JANSSON_INCLUDES)
+hodlminer_CPPFLAGS	= $(PTHREAD_FLAGS) -march=native -Ofast -flto -fuse-linker-plugin -std=gnu11 $(JANSSON_INCLUDES)
 
 bin_PROGRAMS	= hodlminer
 
@@ -20,8 +22,12 @@ hodlminer_SOURCES	= elist.h miner.h compat.h \
 
 hodlminer_LDFLAGS	= $(PTHREAD_FLAGS)
 hodlminer_LDADD		= @LIBCURL_LIBS@ @OPENSSL_LIBS@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@ -lssl -lcrypto
-hodlminer_CPPFLAGS	= @LIBCURL_CPPFLAGS@
+hodlminer_CPPFLAGS	+= @LIBCURL_CPPFLAGS@ @LIBCURL_CFLAGS@
 
 if USE_BUILD_NUMBER
 hodlminer_CFLAGS	= -DBUILD_NUMBER=\"$(BUILD_NUMBER)\"
+endif
+
+if HAVE_WINDOWS
+hodlminer_LDFLAGS += -all-static
 endif
