--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@ hodlminer_SOURCES	= elist.h miner.h compat.h \
 		  	  sha2.c cpu-miner.c util.c hodl.c aes.c
 
 hodlminer_LDFLAGS	= $(PTHREAD_FLAGS)
-hodlminer_LDADD		= @LIBCURL_LIBS@ @OPENSSL_LIBS@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@ -lssl -lcrypto
+hodlminer_LDADD		= @LIBCURL_LIBS@ @OPENSSL_LIBS@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
 hodlminer_CPPFLAGS	+= @LIBCURL_CPPFLAGS@ @LIBCURL_CFLAGS@
 
 if USE_BUILD_NUMBER
